--- a/img.html
+++ b/img.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>documento de prueba</title>
+    <title>github page</title>
 </head>
 <body>
-    <h1>PRIMEROS CAMBIOS </h1>
-    <h2>segundos cambios</h2>
-    <p>subiendo a la nube</p>
+    <h1>Mi pagina funcionando con github page</h1>
 </body>
 </html>
